ds-activation-kustomize/bases/deployment-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: OVERWRITE_PER_APP
spec:
  replicas: OVERWRITE_PER_ENV
  selector:
    matchLabels:
      sdr.appname: OVERWRITE_PER_APP
  template:
    metadata:
      labels:
        sdr.appname: OVERWRITE_PER_APP
    spec:
      containers:
        - image: OVERWRITE_PER_ENV
          name: OVERWRITE_PER_APP
          imagePullPolicy: Always
          resources:
            limits:
              cpu: OVERWRITE_PER_ENV
              memory: OVERWRITE_PER_ENV
            requests:
              cpu: OVERWRITE_PER_ENV
              memory: OVERWRITE_PER_ENV
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          volumeMounts:
          - mountPath: /tmp
            name: tmp
          - mountPath: /app/keystores
            name: keystores
          - mountPath: /opt/apps/etc/private
            name: secrets
          - mountPath: /app/logs
            name: app-logs
          - mountPath: /identity
            name: identity-certs
            readOnly: true
        - image: "docker.apple.com/splunk-ist/splunk-universalforwarder:latest"
          name: splunk-forwarder
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/logs
              name: app-logs
            - mountPath: "/etc/splunk/podinfo"
              name: podinfo
              readOnly: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: keystores
          emptyDir: {}
        - name: secrets
          emptyDir: {}
        # - name: auth
        #   secret:
        #     secretName: whisper-auth
        - name: app-logs
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: identity-certs
          emptyDir: {}
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "uid"
                fieldRef:
                  fieldPath: metadata.uid
        - csi:
            driver: cmcs.crypto-services.apple.com
            readOnly: true
            volumeAttributes:
              cmcs.crypto-services.apple.com/fs-group: "1010" # required if it is non-root container
              cmcs.crypto-services.apple.com/issuer-kind: AppleCertificateManagerCorpCA
              cmcs.crypto-services.apple.com/issuer-name: applecm-corpca
              cmcs.crypto-services.apple.com/issuer-group: cmcs.crypto-services.apple.com
              cmcs.crypto-services.apple.com/key-usages: client auth,digital signature,key encipherment
              cmcs.crypto-services.apple.com/duration: 24h # [optional] shortest validity for tls_client_internal cert
          name: identity-certs
      priorityClassName: OVERWRITE_PER_ENV
